
SVN
-------------------------------

XML:   Resolved issue CASTOR-1655 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed broken code sample in XML best practice document.
       Details: http://jira.codehaus.org/browse/CASTOR-1655
       (Edward - 20061024)

XML:   Resolved issue CASTOR-1652 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Castor Source Code is created with ISO-8859-1 encoding, not UTF-8
       Details: http://jira.codehaus.org/browse/CASTOR-1652
       (Edward - 20061023)

XML:   Resolved issue CASTOR-1632 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for XML schema type 'unsignedLong' to XML code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1632
       (Edward - 20061023)

XML:   Resolved issue CASTOR-1647 using contribution from Edward Kuns [edward.kuns@aspect.com]
       log4j / junit classpath conflict with CTF
       Details: http://jira.codehaus.org/browse/CASTOR-1647
       (Edward - 20061023)


Version 1.0.4, Oct 22, 2006
-------------------------------

XML:   Resolved issue CASTOR-1645 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrect handling of elememt references to global elements
       within complex type definitions during code generation.
       Details: http://jira.codehaus.org/browse/CASTOR-1645
       (Werner - 20061022)

XML:   Resolved issue CASTOR-1643 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Remove new tree of tests of known bugs (reverse changes of CASTOR-1640)
       Details: http://jira.codehaus.org/browse/CASTOR-1643
       (Edward - 20061020)

XML:   Resolved issue CASTOR-1641 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Enhance UNIX CTFRun.sh script
       Details: http://jira.codehaus.org/browse/CASTOR-1641
       (Edward - 20061019)
